--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,13 +4,14 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 defaults:
   run:
     shell: 'bash -Eeuo pipefail -x {0}'
 
 jobs:
-  test:
+  build:
     name: Release
     runs-on: ubuntu-latest
     steps:
