--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,14 +11,13 @@ defaults:
     shell: 'bash -Eeuo pipefail -x {0}'
 
 jobs:
-  build:
+  build_and_test:
     name: Release
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - run: sudo apt-get update && sudo apt-get install -y --no-install-recommends binfmt-support qemu-user-static
-      - run: ./build.sh && ./sign.sh
-      - run: ls -la gosu-*
+      - run: ./build.sh
       - uses: actions/setup-go@v3
         with:
           go-version: 1.18
@@ -26,5 +25,12 @@ jobs:
       # https://github.com/golang/vuln/releases
       - run: go install golang.org/x/vuln/cmd/govulncheck@9bf256343acc20d22586789d07aecf887d8a5aea
       # (update "go-version" above when updating this version)
-
       - run: for gosu in gosu-*; do govulncheck "$gosu"; done
+      - run: ./sign.sh
+      - run: ls -la gosu-*
+      - name: Archive production artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: upload-files
+          path: |
+            gosu-*
