--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -49,4 +49,4 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: gosu-amd64
           asset_name: gosu-amd64
-          #asset_content_type: application/zip
+          asset_content_type: application/vnd.debian.binary-package
