--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,10 +21,7 @@ jobs:
       - uses: actions/setup-go@v3.5.0
         with:
           go-version: 1.20
-      # https://github.com/golang/vuln/commits/master
-      # https://github.com/golang/vuln/releases
-      - run: go install golang.org/x/vuln/cmd/govulncheck@9bf256343acc20d22586789d07aecf887d8a5aea
-      # (update "go-version" above when updating this version)
+      - run: go install golang.org/x/vuln/cmd/govulncheck@latest
       - run: for gosu in gosu-*; do govulncheck "$gosu"; done
       - name: Create Release
         id: create_release
