--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,10 +18,13 @@ jobs:
       - uses: actions/checkout@v3
       - run: sudo apt-get update && sudo apt-get install -y --no-install-recommends binfmt-support qemu-user-static
       - run: ./build.sh
-      - uses: actions/setup-go@v3.5.0
+      - uses: actions/setup-go@v4
         with:
           go-version: 1.20
-      - run: go install golang.org/x/vuln/cmd/govulncheck@latest
+      - run: |
+          export GO111MODULE=on
+          export PATH=${PATH}:`go env GOPATH`/bin
+          go install golang.org/x/vuln/cmd/govulncheck@latest
       - run: for gosu in gosu-*; do govulncheck "$gosu"; done
       - name: Create Release
         id: create_release
