--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,13 +18,12 @@ jobs:
       - uses: actions/checkout@v3
       - run: sudo apt-get update && sudo apt-get install -y --no-install-recommends binfmt-support qemu-user-static
       - run: ./build.sh
-      - uses: actions/setup-go@v4
+      - uses: actions/setup-go@v3.5.0
         with:
-          go-version: 1.20
-      - run: |
-          export GO111MODULE=on
-          export PATH=${PATH}:`go env GOPATH`/bin
-          go install golang.org/x/vuln/cmd/govulncheck@latest
+          go-version: 1.18
+      # https://github.com/golang/vuln/commits/master
+      # https://github.com/golang/vuln/releases
+      - run: go install golang.org/x/vuln/cmd/govulncheck@9bf256343acc20d22586789d07aecf887d8a5aea
       - run: for gosu in gosu-*; do govulncheck "$gosu"; done
       - name: Create Release
         id: create_release
